--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "laravel/ui": "^4.6"
+        "laravel/ui": "^4.6",
+        "nesbot/carbon": "^3.8"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.14",
