--- a/public/.htaccess
+++ b/public/.htaccess
@@ -26,4 +26,6 @@
     Header always set Referrer-Policy "strict-origin-when-cross-origin"
     Header always set Permissions-Policy "geolocation=(), camera=()"
     Header always set Content-Security-Policy "default-src 'self';"
+    Header set Content-Security-Policy "default-src 'self'; script-src 'self' https://cdn.jsdelivr.net https://code.jquery.com; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; font-src 'self' data:; img-src 'self' data:;"
+
 </IfModule>
