test: cover basket merge, checkout finalization, race conditions and high-load scenarios

--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,10 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+# Cart Redis layer (fallback to session if disabled or Redis unavailable)
+CART_REDIS_ENABLED=true
+CART_GUEST_TTL=604800
+
 MAIL_MAILER=log
 MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
